force-app/main/objects/Pendula_Message__c.object
<CustomObject>
    <description>Message object to support Pendula Integration. This object tracks the candidate engagement &amp; communication.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Report Field to display Account Name to filter and summarize the report for better visibility.</description>
        <formula>Job__r.Account__r.Name   +  &apos; | &apos;   +  Job__r.Account__r.Account_Number__c</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Created for Pendula Integration</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
                <value>
                    <fullName>WeChat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Body_HTML__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Email Body HTML</label>
        <length>65536</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created to support Pendula integration</description>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Messages (Pendula)</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managed_Services_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created to support Pendula integration</description>
        <label>Candidate</label>
        <referenceTo>Bureau_Candidate__c</referenceTo>
        <relationshipLabel>Messages (Pendula)</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matched_Part__c</fullName>
        <description>Created to support Pendula integration</description>
        <inlineHelpText>For inbound SMS only - can be used to extract just the portion of text that matched the rule.</inlineHelpText>
        <label>Matched Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Reason__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Outcome Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>success</fullName>
                </value>
                <value>
                    <fullName>failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Email_Address__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Recipient Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Mobile_Number__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Recipient Mobile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_Path_Label__c</fullName>
        <description>Created too support Pendula integration</description>
        <inlineHelpText>For inbound SMS only - can be used to determine which path a response was matched to.</inlineHelpText>
        <label>Reply Path Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Message_Body__c</fullName>
        <description>Created to support Pendula integration</description>
        <label>SMS Message Body</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sender_Name__c</fullName>
        <description>Created to support Pendula Integration</description>
        <label>Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Managed_Services_Candidate__c</columns>
        <columns>Job__c</columns>
        <columns>Channel__c</columns>
        <columns>Email_Subject__c</columns>
        <columns>Direction__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>